cargo-features = ['named-profiles']

[package]
name = "byte_lines"
version = "0.1.0"
authors = ["alexdelorenzo <alex@alexdelorenzo.dev>"]
edition = "2018"
opt-level = 3
description = "Return or exclude the nth lines supplied from stdin as output on stdout."
license = " AGPL-3.0-only"
repository = "https://github.com/alexdelorenzo/byte_lines"
homepage = "https://alexdelorenzo.dev"
documentation = "https://github.com/alexdelorenzo/byte_lines"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte_string = "1.0.0"

[profile.release]
opt-level = 3
debug = false 
incremental = true
lto = true

[profile.dev]
opt-level = 3
incremental = true

# [profile.debug]
# opt-level = 3
